# breast_cancer_classification

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py  main.py
app/models/: predictions.py  sample_results.py  samples.py
app/routers/: __init__.py  prediction.py
app/schemas/: sample.py
app/utils/: load_classifier.py
frontend/: index.html  script.js  style.css
instance/: results.db
ml/: breast_cancer_wisconsin_classifier.ipynb  colunas.pkl  melhor_modelo.pkl  scaler.pkl
tests/: test_api.py  test_model.py
utils/: load_classifier.py
